name:                simplir-trec-streaming
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.TrecStreaming,
                       SimplIR.TrecStreaming.FacAnnotations
  other-extensions:    GeneralizedNewtypeDeriving, DeriveGeneric, RecordWildCards
  build-depends:       base >=4.9 && <4.10,
                       bytestring >=0.10 && <0.11,
                       unordered-containers >= 0.2 && < 0.3,
                       text >=1.2 && <1.3,
                       time >=1.6 && <1.7,
                       pinch >=0.3 && <0.4,
                       binary,
                       aeson >=1.0 && <1.2,
                       yaml,
                       hashable,
                       attoparsec,
                       pipes-attoparsec,
                       pipes,
                       simplir
  ghc-options:         -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010

executable trec-streaming-ls-documents
  main-is:             ListDocuments.hs
  default-language:    Haskell2010
  build-depends:       base,
                       bytestring,
                       text,
                       monad-control,
                       pipes-safe,
                       pipes-bytestring,
                       monad-control,
                       simplir,
                       optparse-applicative,
                       lzma,
                       yaml,
                       simplir-trec-streaming

executable index-fac
  main-is:             IndexFac.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      filepath,
      directory,
      temporary,
      mtl,
      binary,
      foldl,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.7,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      aeson,
      warc,
      b-tree,
      simplir,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall

executable kba-streaming
  main-is:             Streaming.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      trifecta,
      filepath,
      monad-control,
      directory,
      temporary,
      mtl,
      binary,
      foldl,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers >=0.5 && <0.6,
      unordered-containers >= 0.2,
      hashable,
      log-domain,
      free,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      aeson,
      yaml,
      warc,
      b-tree,
      zlib,
      simplir,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -O2

executable merge-kba-rankings
  main-is:             MergeRankings.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      filepath,
      directory,
      temporary,
      monad-control,
      mtl,
      binary,
      heaps,
      foldl,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      pipes-text,
      pipes-safe,
      trifecta,
      aeson,
      zlib,
      warc,
      b-tree,
      simplir,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -O2

executable extract-kba-documents
  main-is:             Extract.hs
  build-depends:
      base,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers,
      monoidal-containers,
      monad-control,
      filepath,
      directory,
      temporary,
      mtl,
      binary,
      foldl,
      pinch,
      vector,
      vector-algorithms,
      profunctors,
      text >=1.2 && <1.3,
      containers,
      unordered-containers >= 0.2,
      log-domain,
      optparse-applicative >= 0.12,
      trifecta,
      pipes-text,
      pipes-safe,
      aeson,
      yaml,
      warc,
      b-tree,
      simplir,
      async,
      stm,
      simplir-trec-streaming,
      simplir-trec
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -O2 -threaded


executable trec-streaming-learn
  main-is:             LearningToRank.hs
  build-depends:
      base,
      vector,
      text,
      trifecta,
      containers,
      aeson,
      random,
      log-domain,
      binary,
      unordered-containers,
      yaml,
      optparse-applicative,
      simplir-trec-streaming,
      simplir
  default-language:    Haskell2010
  ghc-options:         -rtsopts -Wall -O2 -threaded
