name:                simplir-trec
version:             0.1.0.0
synopsis:            TREC format parser
-- description:         
homepage:            http://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.TREC
  other-extensions:    OverloadedStrings, RecordWildCards
  default-language:    Haskell2010
  build-depends:       base >=4.8 && <4.10,
                       pipes >=4.1 && <4.3 ,
                       text >=1.2 && <1.3,
                       transformers >=0.4 && <0.6,
                       case-insensitive >=1.2 && <1.3,
                       pipes-attoparsec >=0.5 && <0.6,
                       pipes-parse >=3.0 && <3.1,
                       lens >=4.13 && <4.16,
                       html-parse >=0.2 && <0.3,
                       attoparsec >= 0.13
  ghc-options:         -Wall

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             Benchmark.hs
  build-depends:       base,
                       pipes,
                       text,
                       transformers,
                       case-insensitive,
                       pipes-attoparsec,
                       pipes-parse,
                       lens,
                       html-parse,
                       criterion >=1.1 && <1.2
  ghc-options:         -Wall