name:                simplir-word-embedding
version:             0.1.0.0
synopsis:            Word embeddings
-- description:         
homepage:            https://github.com/bgamari/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     SimplIR.WordEmbedding,
                       SimplIR.WordEmbedding.Parse
  other-extensions:    GeneralizedNewtypeDeriving, BangPatterns, DataKinds, PolyKinds, ScopedTypeVariables, KindSignatures, TypeApplications, GADTs
  build-depends:       base >=4.9 && <4.11,
                       deepseq >= 1.4 && < 1.5,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       primitive,
                       vector,
                       simplir,
                       indexed-vector >=0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
