name:                simplir
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            http://git.smart-cactus.org/ben/simplir
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2016 Ben Gamari
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
  ghc-options:         -Wall
  hs-source-dirs:      src
  other-modules:
      Data.SmallNat

  exposed-modules:
      BTree.File
      Data.SmallUtf8
      Data.Trie
      Numeric.Log.Scientific
      Control.Concurrent.Map
      SimplIR.Statistics
      SimplIR.Assessment.Agreement
      SimplIR.Bag
      SimplIR.BinaryFile
      SimplIR.Ranking
      SimplIR.RetrievalModels.CorpusStats
      SimplIR.RetrievalModels.QueryLikelihood
      SimplIR.RetrievalModels.TfIdf
      SimplIR.RetrievalModels.BM25
      SimplIR.RetrievalModels.RelevanceModel
      AccumPostings
      SimplIR.Encoded
      SimplIR.Encoded.Cbor
      SimplIR.EncodedList
      SimplIR.EncodedList.Cbor
      SimplIR.Tokenise
      SimplIR.TopK
      SimplIR.Utils.Compact
      SimplIR.Types
      SimplIR.Histogram
      SimplIR.Term
      SimplIR.WarcDocSource
      SimplIR.Intern

  if impl(ghc >= 8.2)
      build-depends: ghc-compact

  build-depends:
      base >=4.8 && <4.13,
      template-haskell,
      pipes-bytestring >=2.1 && <2.2,
      pipes,
      bytestring >=0.10 && <0.11,
      transformers >=0.4 && <0.6,
      contravariant >= 1.3 && <1.6,
      charset >= 0.3,
      mtl,
      async,
      stm,
      split,
      parallel,
      binary >= 0.7 && < 0.10,
      errors >=2.0 && <2.4,
      exceptions >= 0.8,
      text >=1.2 && <1.3,
      aeson,
      trifecta >= 1.5,
      containers >=0.5 && <0.7,
      case-insensitive >=1.2 && <1.3,
      pipes-zlib >= 0.4.4.2 && <0.5,
      pipes-lzma,
      pipes-safe,
      lens >=4.14 && <4.19,
      http-types >=0.9 && <0.13,
      http-media >=0.6 && <0.8,
      http-parsers >= 0.1 && <0.2,
      attoparsec >=0.13 && <0.14,
      filepath >=1.4 && <1.5,
      directory,
      text-icu >=0.7 && <0.8,
      deepseq >=1.4 && <1.5,
      unordered-containers >=0.2 && <0.3,
      hashable >= 1.2 && <1.3,
      logging-facade >= 0.1 && <0.4,
      log-domain,
      linear,
      scientific,
      dlist >= 0.7,
      profunctors >= 5.1,
      foldl >= 1.1,
      vector >= 0.11,
      hybrid-vectors,
      vector-th-unbox >= 0.2,
      vector-algorithms,
      primitive,
      optparse-applicative >= 0.12,
      random,
      random-shuffle,

      monad-control,
      process,
      lifted-async,

      b-tree,
      heaps,
      vector-binary-instances >= 0.2,
      warc >=1.0 && <1.1,
      simplir-html-clean,
      simplir-pipes-utils,
      serialise,
      cborg >= 0.2,
      indexed-vector,

      QuickCheck >=2.8 && <2.14,
      tasty,
      tasty-quickcheck,
      tasty-hunit,
      temporary
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base,
    tasty,
    simplir
